# nova-overlay-translator

./: .gitignore  README.md  capture.py  llm_prompt.json  main.py  ocr.py  pyproject.toml  region_selector.py  region_utils.py  setting.py  to_exe_guide.txt  translator.py
