[project]
name = "auto-capture-game-script-real-time"
version = "0.1.0"
description = "Real-time game dialog capture and translation"
readme = "README.md"
requires-python = ">=3.10"


dependencies = [
    "PyQt6>=6.2.0",
    "PyQt6-Fluent-Widgets[Fluent]>=1.5.0",
    "flet>=0.24.0",
    "keyboard>=0.13.5",
    "mss>=9.1.5",
    "easyocr>=1.7.1",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0"
]

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = ["."]